Syntax cleanup